--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,19 @@
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap');
+
 body {
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
   max-width: 1280px;
+  font-family: 'Montserrat', sans-serif;
+  background-color:rgba(220, 20, 60, 0.595);
+}
+
+h1 {
+  font-family: 'Mountains of Christmas', cursive;
+  color: white;
+  text-align: center;
 }
 
