:tada: update boilrplate

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   box-sizing: border-box;
   max-width: 1280px;
   font-family: 'Montserrat', sans-serif;
-  background-color:rgba(220, 20, 60, 0.595);
+  background-color: #2c5b02;
 }
 
 h1 {
