--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,12 @@
 
 body {
   margin: 0 auto;
-  padding: 0;
+  padding: 1vw;
   box-sizing: border-box;
   max-width: 1280px;
   font-family: 'Montserrat', sans-serif;
   background-color: #2c5b02;
+  color: white;
 }
 
 h1 {
@@ -16,4 +17,3 @@ h1 {
   color: white;
   text-align: center;
 }
-
