--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap');
 
 body {
+  max-width: 1200px;
   margin: 0 auto;
-  padding: 0;
   box-sizing: border-box;
-  max-width: 1280px;
   font-family: 'Montserrat', sans-serif;
   background-color: #2c5b02;
+  padding: 1vw;
+  position: relative;
+  background-image: url(assets/grinch.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 h1 {
@@ -17,3 +21,12 @@ h1 {
   text-align: center;
 }
 
+/* gift list */
+.list-container{
+  background-color: crimson;
+  color: white;
+  padding: 1rem;
+  width: 50%;
+  margin: 0 auto;
+  border: 1px solid white;
+}
